# metamem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: locomo10.json
docs/adal/: fea_auto_memory_hooks.md
mem_engram/: __init__.py  __main__.py  cli.py  dashboard.py  extractor.py  hooks.py  mcp_server.py  models.py  retriever.py  retriever_dci.py  session.py  store.py  usage.py
mem_engram/assets/: dashboard.html
mem_engram/benchmarks/: head_to_head.py  hotpotqa.py  runner.py
metamem/: __init__.py  __main__.py  cli.py  dashboard.py  evolution.py  hooks.py  mcp_server.py  retriever.py  session.py  store.py  usage.py
metamem/assets/: dashboard.html
metamem/benchmarks/: __init__.py  hotpotqa.py  runner.py
paper/: mem_engram_paper.md  metamem_paper.md
tests/: test_core.py  test_dashboard.py  test_hooks.py  test_usage.py
