[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem-engram"
version = "0.2.0"
description = "Mem-Engram: self-evolving typed memory system for LLM agents — typed stores, iterative retrieval, MCP integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "SimpleMem Team"},
]
keywords = ["llm", "memory", "agent", "mcp", "evolution", "engram", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lancedb>=0.6.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2.2",
    "openai>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "uvicorn>=0.27",
    "fastapi>=0.109",
    "pydantic>=2.0",
]

[project.optional-dependencies]
benchmark = [
    "rouge-score>=0.1.2",
    "nltk>=3.8",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
]

[project.scripts]
mem-engram = "mem_engram.cli:main"

[project.entry-points."mcp.servers"]
mem-engram = "mem_engram.mcp_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["mem_engram"]

[tool.hatch.build.targets.wheel.force-include]
"mem_engram/assets" = "mem_engram/assets"

[tool.ruff]
line-length = 100
target-version = "py310"
